--- a/templates/UserList.html
+++ b/templates/UserList.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <!-- start of navigation bar -->
+    <!-- Start of navigation bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Your Boys Grocery Store</a>
@@ -34,8 +34,46 @@
             </div>
         </div>
     </nav>
-    <!-- end of navigation bar -->
-    
+    <!-- End of navigation bar -->
+
+    <!-- Start of user list -->
+    <ul class="list-group list-group-horizontal">
+        <li class="list-group-item">List of users</li>
+    </ul>   
+    <ul class="list-group list-group-horizontal">
+        <li class="list-group-item">User's Name</li>
+        <li class="list-group-item">Edit</li>
+        <li class="list-group-item">Delete</li>
+    </ul>
+    <ul class="list-group list-group-horizontal">
+        <li class="list-group-item">User's Name</li>
+        <li class="list-group-item">Edit</li>
+        <li class="list-group-item">Delete</li>
+    </ul>
+    <ul class="list-group list-group-horizontal">
+        <li class="list-group-item">User's Name</li>
+        <li class="list-group-item">Edit</li>
+        <li class="list-group-item">Delete</li>
+    </ul>
+    <ul class="list-group list-group-horizontal">
+        <li class="list-group-item">User's Name</li>
+        <li class="list-group-item">Edit</li>
+        <li class="list-group-item">Delete</li>
+    </ul>
+    <ul class="list-group list-group-horizontal">
+        <li class="list-group-item">User's Name</li>
+        <li class="list-group-item">Edit</li>
+        <li class="list-group-item">Delete</li>
+    </ul>
+    <ul class="list-group list-group-horizontal">
+        <li class="list-group-item">User's Name</li>
+        <li class="list-group-item">Edit</li>
+        <li class="list-group-item">Delete</li>
+    </ul>
+
+    <!-- End of user list -->
+
+
 </body>
 
 </html>
