Added basic bouttons

--- a/templates/UserList.html
+++ b/templates/UserList.html
@@ -39,39 +39,46 @@
     <!-- Start of user list -->
     <ul class="list-group list-group-horizontal">
         <li class="list-group-item">List of users</li>
-    </ul>   
-    <ul class="list-group list-group-horizontal">
-        <li class="list-group-item">User's Name</li>
-        <li class="list-group-item">Edit</li>
-        <li class="list-group-item">Delete</li>
     </ul>
     <ul class="list-group list-group-horizontal">
         <li class="list-group-item">User's Name</li>
-        <li class="list-group-item">Edit</li>
-        <li class="list-group-item">Delete</li>
+        <li class="list-group-item">
+            <button type="button" class="btn btn-primary">Edit</button>
+        </li>
+        <li class="list-group-item">
+            <button type="button" class="btn btn-danger">Delete</button>
+        </li>
     </ul>
     <ul class="list-group list-group-horizontal">
         <li class="list-group-item">User's Name</li>
-        <li class="list-group-item">Edit</li>
-        <li class="list-group-item">Delete</li>
+        <li class="list-group-item">
+            <button type="button" class="btn btn-primary">Edit</button>
+        </li>
+        <li class="list-group-item">
+            <button type="button" class="btn btn-danger">Delete</button>
+        </li>
     </ul>
     <ul class="list-group list-group-horizontal">
         <li class="list-group-item">User's Name</li>
-        <li class="list-group-item">Edit</li>
-        <li class="list-group-item">Delete</li>
+        <li class="list-group-item">
+            <button type="button" class="btn btn-primary">Edit</button>
+        </li>
+        <li class="list-group-item">
+            <button type="button" class="btn btn-danger">Delete</button>
+        </li>
     </ul>
     <ul class="list-group list-group-horizontal">
         <li class="list-group-item">User's Name</li>
-        <li class="list-group-item">Edit</li>
-        <li class="list-group-item">Delete</li>
+        <li class="list-group-item">
+            <button type="button" class="btn btn-primary">Edit</button>
+        </li>
+        <li class="list-group-item">
+            <button type="button" class="btn btn-danger">Delete</button>
+        </li>
     </ul>
-    <ul class="list-group list-group-horizontal">
-        <li class="list-group-item">User's Name</li>
-        <li class="list-group-item">Edit</li>
-        <li class="list-group-item">Delete</li>
-    </ul>
-
     <!-- End of user list -->
+
+
 
 
 </body>
