Added links to respective bouttons

--- a/templates/OrderList.html
+++ b/templates/OrderList.html
@@ -10,10 +10,11 @@
 </head>
 
 <body>
+
     <!-- Start of navigation bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Your Boys Grocery Store</a>
+            <a class="navbar-brand" href="#">Metro</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -25,10 +26,10 @@
                         <a class="nav-link active" aria-current="page" href="#">ProductList</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">UserList</a>
+                        <a class="nav-link active" aria-current="page" href="/templates/UserList.html">UserList</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">OrderList</a>
+                        <a class="nav-link active" aria-current="page" href="/templates/OrderList.html">OrderList</a>
                     </li>
                 </ul>
             </div>
