--- a/templates/UserList.html
+++ b/templates/UserList.html
@@ -10,10 +10,11 @@
 </head>
 
 <body>
+
     <!-- Start of navigation bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Your Boys Grocery Store</a>
+            <a class="navbar-brand" href="#">Metro</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -25,10 +26,10 @@
                         <a class="nav-link active" aria-current="page" href="#">ProductList</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">UserList</a>
+                        <a class="nav-link active" aria-current="page" href="/templates/UserList.html">UserList</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">OrderList</a>
+                        <a class="nav-link active" aria-current="page" href="/templates/OrderList.html">OrderList</a>
                     </li>
                 </ul>
             </div>
@@ -39,11 +40,12 @@
     <!-- Start of user list -->
     <ul class="list-group list-group-horizontal">
         <li class="list-group-item">List of users</li>
+        <a href = "/templates/EditUser.html"><button type="button" class="btn btn-success">Add New User</button></a>   
     </ul>
     <ul class="list-group list-group-horizontal">
         <li class="list-group-item">User's Name</li>
         <li class="list-group-item">
-            <button type="button" class="btn btn-primary">Edit</button>
+            <a href = "/templates/EditUser.html"><button type="button" class="btn btn-primary">Edit</button></a>
         </li>
         <li class="list-group-item">
             <button type="button" class="btn btn-danger">Delete</button>
@@ -52,7 +54,7 @@
     <ul class="list-group list-group-horizontal">
         <li class="list-group-item">User's Name</li>
         <li class="list-group-item">
-            <button type="button" class="btn btn-primary">Edit</button>
+            <a href = "/templates/EditUser.html"><button type="button" class="btn btn-primary">Edit</button></a>
         </li>
         <li class="list-group-item">
             <button type="button" class="btn btn-danger">Delete</button>
@@ -61,7 +63,7 @@
     <ul class="list-group list-group-horizontal">
         <li class="list-group-item">User's Name</li>
         <li class="list-group-item">
-            <button type="button" class="btn btn-primary">Edit</button>
+            <a href = "/templates/EditUser.html"><button type="button" class="btn btn-primary">Edit</button></a>
         </li>
         <li class="list-group-item">
             <button type="button" class="btn btn-danger">Delete</button>
@@ -70,7 +72,7 @@
     <ul class="list-group list-group-horizontal">
         <li class="list-group-item">User's Name</li>
         <li class="list-group-item">
-            <button type="button" class="btn btn-primary">Edit</button>
+            <a href = "/templates/EditUser.html"><button type="button" class="btn btn-primary">Edit</button></a>
         </li>
         <li class="list-group-item">
             <button type="button" class="btn btn-danger">Delete</button>
