created a sample order list

--- a/templates/OrderList.html
+++ b/templates/OrderList.html
@@ -37,6 +37,55 @@
     </nav>
     <!-- End of navigation bar -->
 
+    <!-- Start of order section -->
+    <ul class="list-group list-group-horizontal">
+        <li class="list-group-item">List of users</li>
+        <li class="list-group-item">Orders</li>
+        <a href = "/templates/EditUser.html"><button type="button" class="btn btn-success">Add New Order</button></a>   
+    </ul>
+    <ul class="list-group list-group-horizontal">
+        <li class="list-group-item">User's Name</li>
+        <li class="list-group-item">1x chicken alfredo sauce, 1x spaghetti, 1x meatballs</li>
+        <li class="list-group-item">
+            <a href = "/templates/EditUser.html"><button type="button" class="btn btn-primary">Edit Order</button></a>
+        </li>
+        <li class="list-group-item">
+            <button type="button" class="btn btn-danger">Delete</button>
+        </li>
+    </ul>
+    <ul class="list-group list-group-horizontal">
+        <li class="list-group-item">User's Name</li>
+        <li class="list-group-item">1x red wine, 4x frozen pizza, 8x oreo cookies</li>
+        <li class="list-group-item">
+            <a href = "/templates/EditUser.html"><button type="button" class="btn btn-primary">Edit Order</button></a>
+        </li>
+        <li class="list-group-item">
+            <button type="button" class="btn btn-danger">Delete</button>
+        </li>
+    </ul>
+    <ul class="list-group list-group-horizontal">
+        <li class="list-group-item">User's Name</li>
+        <li class="list-group-item">1x bagguette, 1x 2L sprite, 1x Cruchies(tm) chips</li>
+        <li class="list-group-item">
+            <a href = "/templates/EditUser.html"><button type="button" class="btn btn-primary">Edit Order</button></a>
+        </li>
+        <li class="list-group-item">
+            <button type="button" class="btn btn-danger">Delete</button>
+        </li>
+    </ul>
+    <ul class="list-group list-group-horizontal">
+        <li class="list-group-item">User's Name</li>
+        <li class="list-group-item">25x salad head, 10x baby carrot</li>
+        <li class="list-group-item">
+            <a href = "/templates/EditUser.html"><button type="button" class="btn btn-primary">Edit Order</button></a>
+        </li>
+        <li class="list-group-item">
+            <button type="button" class="btn btn-danger">Delete</button>
+        </li>
+    </ul>
+
+    <!-- End of order list -->
+
 </body>
 
 </html>
