--- a/templates/UserList.html
+++ b/templates/UserList.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UserList</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel = "stylesheet" href="/styles/BackStore.css">
 </head>
 
 <body>
@@ -39,50 +40,48 @@
 
     <!-- Start of user list -->
     <ul class="list-group list-group-horizontal">
-        <li class="list-group-item">List of users</li>
-        <a href = "/templates/EditUser.html"><button type="button" class="btn btn-success">Add New User</button></a>   
+        <li class="list-group-item User">List of users</li>
+        <li class="list-group-item New">
+            <a href = "/templates/EditUser.html"><button type="button" class="btn btn-success">New</button></a> 
+        </li>
     </ul>
     <ul class="list-group list-group-horizontal">
-        <li class="list-group-item">User's Name</li>
-        <li class="list-group-item">
+        <li class="list-group-item User">Jack Black</li>
+        <li class="list-group-item Edit">
             <a href = "/templates/EditUser.html"><button type="button" class="btn btn-primary">Edit</button></a>
         </li>
-        <li class="list-group-item">
+        <li class="list-group-item Delete">
             <button type="button" class="btn btn-danger">Delete</button>
         </li>
     </ul>
     <ul class="list-group list-group-horizontal">
-        <li class="list-group-item">User's Name</li>
-        <li class="list-group-item">
+        <li class="list-group-item User">Sango Bango</li>
+        <li class="list-group-item Edit">
             <a href = "/templates/EditUser.html"><button type="button" class="btn btn-primary">Edit</button></a>
         </li>
-        <li class="list-group-item">
+        <li class="list-group-item Delete">
             <button type="button" class="btn btn-danger">Delete</button>
         </li>
     </ul>
     <ul class="list-group list-group-horizontal">
-        <li class="list-group-item">User's Name</li>
-        <li class="list-group-item">
+        <li class="list-group-item User">Big Salad Man</li>
+        <li class="list-group-item Edit">
             <a href = "/templates/EditUser.html"><button type="button" class="btn btn-primary">Edit</button></a>
         </li>
-        <li class="list-group-item">
+        <li class="list-group-item Delete">
             <button type="button" class="btn btn-danger">Delete</button>
         </li>
     </ul>
     <ul class="list-group list-group-horizontal">
-        <li class="list-group-item">User's Name</li>
-        <li class="list-group-item">
+        <li class="list-group-item User">Rayan Patel</li>
+        <li class="list-group-item Edit">
             <a href = "/templates/EditUser.html"><button type="button" class="btn btn-primary">Edit</button></a>
         </li>
-        <li class="list-group-item">
+        <li class="list-group-item Delete">
             <button type="button" class="btn btn-danger">Delete</button>
         </li>
     </ul>
     <!-- End of user list -->
-
-
-
-
 </body>
 
 </html>
