--- a/templates/OrderList.html
+++ b/templates/OrderList.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OrderList</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel = "stylesheet" href="/styles/BackStore.css">
 </head>
 
 <body>
@@ -39,47 +40,49 @@
 
     <!-- Start of order section -->
     <ul class="list-group list-group-horizontal">
-        <li class="list-group-item">List of users</li>
-        <li class="list-group-item">Orders</li>
-        <a href = "/templates/EditUser.html"><button type="button" class="btn btn-success">Add New Order</button></a>   
+        <li class="list-group-item User">List of users</li>
+        <li class="list-group-item ProductList">Orders</li>
+        <li class="list-group-item New">
+            <a href = "/templates/EditUser.html"><button type="button" class="btn btn-success">New</button></a>   
+        </li>       
     </ul>
     <ul class="list-group list-group-horizontal">
-        <li class="list-group-item">User's Name</li>
-        <li class="list-group-item">1x chicken alfredo sauce, 1x spaghetti, 1x meatballs</li>
-        <li class="list-group-item">
-            <a href = "/templates/EditUser.html"><button type="button" class="btn btn-primary">Edit Order</button></a>
+        <li class="list-group-item User">Jack Black</li>
+        <li class="list-group-item ProductList">1x chicken alfredo sauce, 1x spaghetti, 1x meatballs</li>
+        <li class="list-group-item Edit">
+            <a href = "/templates/EditUser.html"><button type="button" class="btn btn-primary">Edit</button></a>
         </li>
-        <li class="list-group-item">
+        <li class="list-group-item Delete">
             <button type="button" class="btn btn-danger">Delete</button>
         </li>
     </ul>
     <ul class="list-group list-group-horizontal">
-        <li class="list-group-item">User's Name</li>
-        <li class="list-group-item">1x red wine, 4x frozen pizza, 8x oreo cookies</li>
-        <li class="list-group-item">
-            <a href = "/templates/EditUser.html"><button type="button" class="btn btn-primary">Edit Order</button></a>
+        <li class="list-group-item User">sango bango</li>
+        <li class="list-group-item ProductList">1x red wine, 4x frozen pizza, 8x oreo cookies</li>
+        <li class="list-group-item Edit">
+            <a href = "/templates/EditUser.html"><button type="button" class="btn btn-primary">Edit</button></a>
         </li>
-        <li class="list-group-item">
+        <li class="list-group-item Delete">
             <button type="button" class="btn btn-danger">Delete</button>
         </li>
     </ul>
     <ul class="list-group list-group-horizontal">
-        <li class="list-group-item">User's Name</li>
-        <li class="list-group-item">1x bagguette, 1x 2L sprite, 1x Cruchies(tm) chips</li>
-        <li class="list-group-item">
-            <a href = "/templates/EditUser.html"><button type="button" class="btn btn-primary">Edit Order</button></a>
+        <li class="list-group-item User">Big Salad Man</li>
+        <li class="list-group-item ProductList">1x baguette, 1x 2L sprite, 1x Cruchies(tm) chips</li>
+        <li class="list-group-item Edit">
+            <a href = "/templates/EditUser.html"><button type="button" class="btn btn-primary">Edit</button></a>
         </li>
-        <li class="list-group-item">
+        <li class="list-group-item Delete">
             <button type="button" class="btn btn-danger">Delete</button>
         </li>
     </ul>
     <ul class="list-group list-group-horizontal">
-        <li class="list-group-item">User's Name</li>
-        <li class="list-group-item">25x salad head, 10x baby carrot</li>
-        <li class="list-group-item">
-            <a href = "/templates/EditUser.html"><button type="button" class="btn btn-primary">Edit Order</button></a>
+        <li class="list-group-item User">rayan Patel</li>
+        <li class="list-group-item ProductList">25x salad head, 10x baby carrot</li>
+        <li class="list-group-item Edit">
+            <a href = "/templates/EditUser.html"><button type="button" class="btn btn-primary">Edit</button></a>
         </li>
-        <li class="list-group-item">
+        <li class="list-group-item Delete">
             <button type="button" class="btn btn-danger">Delete</button>
         </li>
     </ul>
