--- a/templates/EditOrder.html
+++ b/templates/EditOrder.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EditOrder</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel = "stylesheet" href="/styles/BackStore.css">
 </head>
 
 <body>
