--- a/templates/EditUser.html
+++ b/templates/EditUser.html
@@ -7,11 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EditUser</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/styles/BackStore.css">
 </head>
 
 <body>
 
-     <!-- Start of navigation bar -->
+    <!-- Start of navigation bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Metro</a>
@@ -36,6 +37,47 @@
         </div>
     </nav>
     <!-- End of navigation bar -->
+
+    <!-- Start of Creation part -->
+    <ul class="list-group list-group-horizontal">
+        <li class="list-group-item Create">Create/Edit a User</li>
+    </ul>
+    <br>
+    <div class="width_adjustment">
+        <div class="input-group row">
+            <span class="input-group-text Begin">First and Last Name</span>
+            <input type="text" placeholder="Ex: Jonathan" aria-label="First name" class="form-control">
+            <input type="text" placeholder="Ex: Pauze" aria-label="Last name" class="form-control">
+        </div>
+        <div class="input-group row">
+            <span class="input-group-text Begin">Email</span>
+            <input type="email" placeholder="Ex: Salad_man@exampleInputEmail1.com" class="form-control"
+                id="exampleInputEmail1" aria-describedby="emailHelp">
+        </div>
+        <div class="input-group row">
+            <span class="input-group-text Begin">Password</span>
+            <input type="text" placeholder="Ex: Password123" aria-label="Last name" class="form-control">
+        </div>
+        <div class="input-group row">
+            <span class="input-group-text Begin">Address</span>
+            <input type="text" placeholder="Ex: 63 Boulevard Samson, Laval, QC" aria-label="Last name"
+                class="form-control">
+        </div>
+        <div class="input-group row">
+            <span class="input-group-text Begin">Postal Code</span>
+            <input type="text" placeholder="Ex: H7X 3E6 " aria-label="Last name" class="form-control">
+        </div>
+        <div class="input-group row">
+            <span class="input-group-text Begin">Credit Card</span>
+            <input type="text" placeholder="Ex: 5500 0000 0000 0004" aria-label="Last name" class="form-control">
+        </div>
+        <br>
+        <form>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </div>
+    <!-- end of creation part -->
+
 
 </body>
 
