--- a/templates/OrderList.html
+++ b/templates/OrderList.html
@@ -43,14 +43,14 @@
         <li class="list-group-item User">List of users</li>
         <li class="list-group-item ProductList">Orders</li>
         <li class="list-group-item New">
-            <a href = "/templates/EditUser.html"><button type="button" class="btn btn-success">New</button></a>   
+            <a href = "/templates/EditOrder.html"><button type="button" class="btn btn-success">New</button></a>   
         </li>       
     </ul>
     <ul class="list-group list-group-horizontal">
         <li class="list-group-item User">Jack Black</li>
         <li class="list-group-item ProductList">1x chicken alfredo sauce, 1x spaghetti, 1x meatballs</li>
         <li class="list-group-item Edit">
-            <a href = "/templates/EditUser.html"><button type="button" class="btn btn-primary">Edit</button></a>
+            <a href = "/templates/EditOrder.html"><button type="button" class="btn btn-primary">Edit</button></a>
         </li>
         <li class="list-group-item Delete">
             <button type="button" class="btn btn-danger">Delete</button>
@@ -60,7 +60,7 @@
         <li class="list-group-item User">sango bango</li>
         <li class="list-group-item ProductList">1x red wine, 4x frozen pizza, 8x oreo cookies</li>
         <li class="list-group-item Edit">
-            <a href = "/templates/EditUser.html"><button type="button" class="btn btn-primary">Edit</button></a>
+            <a href = "/templates/EditOrder.html"><button type="button" class="btn btn-primary">Edit</button></a>
         </li>
         <li class="list-group-item Delete">
             <button type="button" class="btn btn-danger">Delete</button>
@@ -70,17 +70,17 @@
         <li class="list-group-item User">Big Salad Man</li>
         <li class="list-group-item ProductList">1x baguette, 1x 2L sprite, 1x Cruchies(tm) chips</li>
         <li class="list-group-item Edit">
-            <a href = "/templates/EditUser.html"><button type="button" class="btn btn-primary">Edit</button></a>
+            <a href = "/templates/EditOrder.html"><button type="button" class="btn btn-primary">Edit</button></a>
         </li>
         <li class="list-group-item Delete">
             <button type="button" class="btn btn-danger">Delete</button>
         </li>
     </ul>
     <ul class="list-group list-group-horizontal">
-        <li class="list-group-item User">rayan Patel</li>
+        <li class="list-group-item User">Rayan Patel</li>
         <li class="list-group-item ProductList">25x salad head, 10x baby carrot</li>
         <li class="list-group-item Edit">
-            <a href = "/templates/EditUser.html"><button type="button" class="btn btn-primary">Edit</button></a>
+            <a href = "/templates/EditOrder.html"><button type="button" class="btn btn-primary">Edit</button></a>
         </li>
         <li class="list-group-item Delete">
             <button type="button" class="btn btn-danger">Delete</button>
