--- a/templates/EditOrder.html
+++ b/templates/EditOrder.html
@@ -7,13 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EditOrder</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel = "stylesheet" href="/styles/BackStore.css">
+    <link rel="stylesheet" href="/styles/BackStore.css">
 </head>
 
 <body>
-
-     <!-- Start of navigation bar -->
-     <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <!-- Start of navigation bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Metro</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -38,6 +37,70 @@
     </nav>
     <!-- End of navigation bar -->
 
+    <!-- Start of edit order section -->
+    <ul class="list-group list-group-horizontal">
+        <li class="list-group-item User">List of users</li>
+        <li class="list-group-item ProductList">Current Orders</li>
+        <li class="list-group-item New">
+            <button type="button" class="btn btn-success">New Order</button>   
+        </li>       
+    </ul>
+    <ul class="list-group list-group-horizontal">
+        <li class="list-group-item User">Jack Black</li>
+        <li class="list-group-item ProductList">1x chicken alfredo sauce, 1x spaghetti, 1x meatballs</li>
+        <li class="list-group-item Edit">
+            <button type="button" class="btn btn-primary">Add</button>
+            <br>
+            <br>
+            <button type="button" class="btn btn-primary">Remove</button>
+        </li>
+        <li class="list-group-item Delete">
+            <button type="button" class="btn btn-danger">Delete</button>
+        </li>
+    </ul>
+    <ul class="list-group list-group-horizontal">
+        <li class="list-group-item User">sango bango</li>
+        <li class="list-group-item ProductList">1x red wine, 4x frozen pizza, 8x oreo cookies</li>
+        <li class="list-group-item Edit">
+            <button type="button" class="btn btn-primary">Add</button>
+            <br>
+            <br>
+            <button type="button" class="btn btn-primary">Remove</button>
+        </li>
+        <li class="list-group-item Delete">
+            <button type="button" class="btn btn-danger">Delete</button>
+        </li>
+    </ul>
+    <ul class="list-group list-group-horizontal">
+        <li class="list-group-item User">Big Salad Man</li>
+        <li class="list-group-item ProductList">1x baguette, 1x 2L sprite, 1x Cruchies(tm) chips</li>
+        <li class="list-group-item Edit">
+            <button type="button" class="btn btn-primary">Add</button>
+            <br>
+            <br>
+            <button type="button" class="btn btn-primary">Remove</button>
+        </li>
+        <li class="list-group-item Delete">
+            <button type="button" class="btn btn-danger">Delete</button>
+        </li>
+    </ul>
+    <ul class="list-group list-group-horizontal">
+        <li class="list-group-item User">Rayan Patel</li>
+        <li class="list-group-item ProductList">25x salad head, 10x baby carrot</li>
+        <li class="list-group-item Edit">
+            <button type="button" class="btn btn-primary">Add</button>
+            <br>
+            <br>
+            <button type="button" class="btn btn-primary">Remove</button>
+        </li>
+        <li class="list-group-item Delete">
+            <button type="button" class="btn btn-danger">Delete</button>
+        </li>
+    </ul>
+
+
+
+    <!-- End of edit order section -->
 </body>
 
 </html>
