--- a/templates/EditOrder.html
+++ b/templates/EditOrder.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EditOrder</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/styles/BackStore.css">
+    <link rel="stylesheet" href="C:\Users\RMXCr\OneDrive\Documents\Concordia\Semester_8_Winter\SOEN_287\Assignment-1-SOEN-287\BackStore.css">
 </head>
 
 <body>
@@ -97,6 +97,8 @@
             <button type="button" class="btn btn-danger">Delete</button>
         </li>
     </ul>
+
+    <button type="button" class="btn btn-update">Save</button>
     <!-- End of edit order section -->
 </body>
 
