--- a/templates/OrderList.html
+++ b/templates/OrderList.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OrderList</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/styles/BackStore.css">
+    <link rel="stylesheet" href="C:\Users\RMXCr\OneDrive\Documents\Concordia\Semester_8_Winter\SOEN_287\Assignment-1-SOEN-287\BackStore.css">
 </head>
 
 <body>
