Removed /templates/ from links since files are in the same folder

--- a/templates/EditOrder.html
+++ b/templates/EditOrder.html
@@ -26,10 +26,10 @@
                         <a class="nav-link active" aria-current="page" href="#">ProductList</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/templates/UserList.html">UserList</a>
+                        <a class="nav-link active" aria-current="page" href="UserList.html">UserList</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/templates/OrderList.html">OrderList</a>
+                        <a class="nav-link active" aria-current="page" href="OrderList.html">OrderList</a>
                     </li>
                 </ul>
             </div>
