--- a/templates/UserList.html
+++ b/templates/UserList.html
@@ -27,10 +27,10 @@
                         <a class="nav-link active" aria-current="page" href="#">ProductList</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/templates/UserList.html">UserList</a>
+                        <a class="nav-link active" aria-current="page" href="UserList.html">UserList</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/templates/OrderList.html">OrderList</a>
+                        <a class="nav-link active" aria-current="page" href="OrderList.html">OrderList</a>
                     </li>
                 </ul>
             </div>
@@ -42,13 +42,13 @@
     <ul class="list-group list-group-horizontal">
         <li class="list-group-item User">List of users</li>
         <li class="list-group-item New">
-            <a href="/templates/EditUser.html"><button type="button" class="btn btn-success">New</button></a>
+            <a href="EditUser.html"><button type="button" class="btn btn-success">New</button></a>
         </li>
     </ul>
     <ul class="list-group list-group-horizontal">
         <li class="list-group-item User">Jack Black</li>
         <li class="list-group-item Edit">
-            <a href="/templates/EditUser.html"><button type="button" class="btn btn-primary">Edit</button></a>
+            <a href="EditUser.html"><button type="button" class="btn btn-primary">Edit</button></a>
         </li>
         <li class="list-group-item Delete">
             <button type="button" class="btn btn-danger">Delete</button>
@@ -57,7 +57,7 @@
     <ul class="list-group list-group-horizontal">
         <li class="list-group-item User">Sango Bango</li>
         <li class="list-group-item Edit">
-            <a href="/templates/EditUser.html"><button type="button" class="btn btn-primary">Edit</button></a>
+            <a href="EditUser.html"><button type="button" class="btn btn-primary">Edit</button></a>
         </li>
         <li class="list-group-item Delete">
             <button type="button" class="btn btn-danger">Delete</button>
@@ -66,7 +66,7 @@
     <ul class="list-group list-group-horizontal">
         <li class="list-group-item User">Big Salad Man</li>
         <li class="list-group-item Edit">
-            <a href="/templates/EditUser.html"><button type="button" class="btn btn-primary">Edit</button></a>
+            <a href="EditUser.html"><button type="button" class="btn btn-primary">Edit</button></a>
         </li>
         <li class="list-group-item Delete">
             <button type="button" class="btn btn-danger">Delete</button>
@@ -75,7 +75,7 @@
     <ul class="list-group list-group-horizontal">
         <li class="list-group-item User">Rayan Patel</li>
         <li class="list-group-item Edit">
-            <a href="/templates/EditUser.html"><button type="button" class="btn btn-primary">Edit</button></a>
+            <a href="EditUser.html"><button type="button" class="btn btn-primary">Edit</button></a>
         </li>
         <li class="list-group-item Delete">
             <button type="button" class="btn btn-danger">Delete</button>
