Added header with link to homepage to sign up and login pages

--- a/html/style.css
+++ b/html/style.css
@@ -216,3 +216,15 @@ body{
 .signup-form a:hover{
     color: #ffc107;
 }
+
+.header{
+    padding: 10px;
+    text-align: center;
+    background: black;
+    color: white;
+    font-size: 12px;
+}
+.header a{
+    text-decoration: none;
+    color: white;
+}
