--- a/styles/BackStore.css
+++ b/styles/BackStore.css
@@ -3,21 +3,27 @@ ul.list-group.list-group-horizontal {
   margin: auto;
   width: 90%;
   border: 1px solid #000000;
+  word-wrap: break-word;
 }
 
 /* user names */
 li.list-group-item.ProductList {
   width: 40%;
+  min-width: 200px;
+  word-wrap: break-word;
 }
 li.list-group-item.User {
-  width: 20%;
+  width: 30%;
+  min-width: 180px;
   text-align: left;
   font-size: large;
+  word-wrap: break-word;
 }
 
 /* danger button */
 li.list-group-item.Delete {
   width: 20%;
+  min-width: 130px;
   align-content: center;
   font-family: "Comic Sans MS";
 }
@@ -30,6 +36,7 @@ button.btn.btn-danger {
 /* edit button */
 li.list-group-item.Edit {
   width: 20%;
+  min-width: 130px;
   align-content: center;
   font-family: "Comic Sans MS";
 }
@@ -42,6 +49,7 @@ button.btn.btn-primary {
 /* new button */
 li.list-group-item.New {
   width: 40%;
+  min-width: 260px;
   text-align: right;
   font-family: "Comic Sans MS";
 }
@@ -62,14 +70,32 @@ li.list-group-item.Create {
 
 span.input-group-text.Begin {
   width: 20%;
+  min-width: 160px;
+  overflow: auto;
+  
+}
+input.form-control{
+  
+  word-break: break-all;
+  white-space: normal;
+  
 }
 
 div.width_adjustment {
   width: 90%;
   margin: auto;
+  word-wrap: break-word;
 }
 
 div.input-group.row {
   border: 1px solid #000000;
   margin: auto;
+  word-break: break-all;
+  white-space: normal;
+}
+
+/* Scroll menus */
+body{
+  overflow: auto;
+  min-width: 720px;
 }
