--- a/templates/EditUser.html
+++ b/templates/EditUser.html
@@ -17,7 +17,9 @@
 </head>
 
 <body>
+    
 
+    
     <!-- Start of navigation bar -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
         <a class="navbar-brand" href="">Metro</a>
@@ -49,8 +51,8 @@
     <div class="width_adjustment">
         <div class="input-group row">
             <span class="input-group-text Begin">First and Last Name</span>
-            <input type="text" placeholder="Ex: Jonathan" aria-label="First name" class="form-control">
-            <input type="text" placeholder="Ex: Pauze" aria-label="Last name" class="form-control">
+            <input type="text" placeholder="Ex: Salad" aria-label="First name" class="form-control">
+            <input type="text" placeholder="Ex: Man" aria-label="Last name" class="form-control">
         </div>
         <div class="input-group row">
             <span class="input-group-text Begin">Email</span>
