made the submit button a save button

--- a/templates/EditOrder.html
+++ b/templates/EditOrder.html
@@ -100,6 +100,14 @@
             <button type="button" class="btn btn-danger">Delete</button>
         </li>
     </ul>
+    <br>
+    <div class="width_adjustment">
+        <form>
+            <button type="submit" class="btn btn-primary">Save</button>
+        </form>
+    </div>
+
+
     <!-- End of edit order section -->
 </body>
 
