--- a/templates/EditUser.html
+++ b/templates/EditUser.html
@@ -78,7 +78,7 @@
         </div>
         <br>
         <form>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Save</button>
         </form>
     </div>
     <!-- end of creation part -->
