Changed the sample names

--- a/templates/EditOrder.html
+++ b/templates/EditOrder.html
@@ -49,7 +49,7 @@
         </li>
     </ul>
     <ul class="list-group list-group-horizontal">
-        <li class="list-group-item User">Jack Black</li>
+        <li class="list-group-item User">John Snow</li>
         <li class="list-group-item ProductList">1x chicken alfredo sauce, 1x spaghetti, 1x meatballs</li>
         <li class="list-group-item Edit">
             <button type="button" class="btn btn-primary">Add</button>
@@ -62,7 +62,7 @@
         </li>
     </ul>
     <ul class="list-group list-group-horizontal">
-        <li class="list-group-item User">sango bango</li>
+        <li class="list-group-item User">John Doe</li>
         <li class="list-group-item ProductList">1x red wine, 4x frozen pizza, 8x oreo cookies</li>
         <li class="list-group-item Edit">
             <button type="button" class="btn btn-primary">Add</button>
@@ -75,7 +75,7 @@
         </li>
     </ul>
     <ul class="list-group list-group-horizontal">
-        <li class="list-group-item User">Big Salad Man</li>
+        <li class="list-group-item User">Jonathan Doe</li>
         <li class="list-group-item ProductList">1x baguette, 1x 2L sprite, 1x Cruchies(tm) chips</li>
         <li class="list-group-item Edit">
             <button type="button" class="btn btn-primary">Add</button>
@@ -88,7 +88,7 @@
         </li>
     </ul>
     <ul class="list-group list-group-horizontal">
-        <li class="list-group-item User">Rayan Patel</li>
+        <li class="list-group-item User">Johnny Doe</li>
         <li class="list-group-item ProductList">25x salad head, 10x baby carrot</li>
         <li class="list-group-item Edit">
             <button type="button" class="btn btn-primary">Add</button>
