--- a/templates/UserList.html
+++ b/templates/UserList.html
@@ -49,7 +49,7 @@
         </li>
     </ul>
     <ul class="list-group list-group-horizontal">
-        <li class="list-group-item User">Jack Black</li>
+        <li class="list-group-item User">John Snow</li>
         <li class="list-group-item Edit">
             <a href="/templates/EditUser.html"><button type="button" class="btn btn-primary">Edit</button></a>
         </li>
@@ -58,7 +58,7 @@
         </li>
     </ul>
     <ul class="list-group list-group-horizontal">
-        <li class="list-group-item User">Sango Bango</li>
+        <li class="list-group-item User">John Doe</li>
         <li class="list-group-item Edit">
             <a href="/templates/EditUser.html"><button type="button" class="btn btn-primary">Edit</button></a>
         </li>
@@ -67,7 +67,7 @@
         </li>
     </ul>
     <ul class="list-group list-group-horizontal">
-        <li class="list-group-item User">Big Salad Man</li>
+        <li class="list-group-item User">Jonathan Doe</li>
         <li class="list-group-item Edit">
             <a href="/templates/EditUser.html"><button type="button" class="btn btn-primary">Edit</button></a>
         </li>
@@ -76,7 +76,7 @@
         </li>
     </ul>
     <ul class="list-group list-group-horizontal">
-        <li class="list-group-item User">Rayan Patel</li>
+        <li class="list-group-item User">Johnny Doe</li>
         <li class="list-group-item Edit">
             <a href="/templates/EditUser.html"><button type="button" class="btn btn-primary">Edit</button></a>
         </li>
