--- a/templates/OrderList.html
+++ b/templates/OrderList.html
@@ -50,7 +50,7 @@
         </li>
     </ul>
     <ul class="list-group list-group-horizontal">
-        <li class="list-group-item User">Jack Black</li>
+        <li class="list-group-item User">John Snow</li>
         <li class="list-group-item ProductList">1x chicken alfredo sauce, 1x spaghetti, 1x meatballs</li>
         <li class="list-group-item Edit">
             <a href="/templates/EditOrder.html"><button type="button" class="btn btn-primary">Edit</button></a>
@@ -60,7 +60,7 @@
         </li>
     </ul>
     <ul class="list-group list-group-horizontal">
-        <li class="list-group-item User">sango bango</li>
+        <li class="list-group-item User">John Doe</li>
         <li class="list-group-item ProductList">1x red wine, 4x frozen pizza, 8x oreo cookies</li>
         <li class="list-group-item Edit">
             <a href="/templates/EditOrder.html"><button type="button" class="btn btn-primary">Edit</button></a>
@@ -70,7 +70,7 @@
         </li>
     </ul>
     <ul class="list-group list-group-horizontal">
-        <li class="list-group-item User">Big Salad Man</li>
+        <li class="list-group-item User">Jonathan Doe</li>
         <li class="list-group-item ProductList">1x baguette, 1x 2L sprite, 1x Cruchies(tm) chips</li>
         <li class="list-group-item Edit">
             <a href="/templates/EditOrder.html"><button type="button" class="btn btn-primary">Edit</button></a>
@@ -80,7 +80,7 @@
         </li>
     </ul>
     <ul class="list-group list-group-horizontal">
-        <li class="list-group-item User">Rayan Patel</li>
+        <li class="list-group-item User">Johnny Doe</li>
         <li class="list-group-item ProductList">25x salad head, 10x baby carrot</li>
         <li class="list-group-item Edit">
             <a href="/templates/EditOrder.html"><button type="button" class="btn btn-primary">Edit</button></a>
