--- a/templates/EditUser.html
+++ b/templates/EditUser.html
@@ -11,15 +11,17 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <style>body {
-        padding-top: 50px
-    }</style>
+    <style>
+        body {
+            padding-top: 50px
+        }
+    </style>
 </head>
 
 <body>
-    
 
-    
+
+
     <!-- Start of navigation bar -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
         <a class="navbar-brand" href="">Metro</a>
@@ -29,7 +31,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Product List</a>
+                    <a class="nav-link" href="/templates/ProductList.html">Product List</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/templates/UserList.html">User List</a>
