--- a/templates/UserList.html
+++ b/templates/UserList.html
@@ -27,7 +27,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Product List</a>
+                    <a class="nav-link" href="/templates/ProductList.html">Product List</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/templates/UserList.html">User List</a>
