--- a/templates/EditOrder.html
+++ b/templates/EditOrder.html
@@ -21,7 +21,7 @@
 <body>
     <!-- Start of navigation bar -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
-        <a class="navbar-brand" href="">Metro</a>
+        <a class="navbar-brand" href="/templates/Home.html">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
