--- a/templates/OrderList.html
+++ b/templates/OrderList.html
@@ -11,23 +11,25 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <style>body {
-        padding-top: 50px
-    }</style>
+    <style>
+        body {
+            padding-top: 50px
+        }
+    </style>
 </head>
 
 <body>
 
     <!-- Start of navigation bar -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
-        <a class="navbar-brand" href="">Metro</a>
+        <a class="navbar-brand" href="/templates/Home.html">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Product List</a>
+                    <a class="nav-link" href="/templates/ProductList.html">Product List</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/templates/UserList.html">User List</a>
@@ -40,7 +42,7 @@
     </nav>
     <br>
     <!-- End of navigation bar -->
-    
+
     <!-- Start of order section -->
     <ul class="list-group list-group-horizontal">
         <li class="list-group-item User">List of users</li>
