--- a/templates/EditUser.html
+++ b/templates/EditUser.html
@@ -24,7 +24,7 @@
 
     <!-- Start of navigation bar -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
-        <a class="navbar-brand" href="">Metro</a>
+        <a class="navbar-brand" href="Home.html">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
