--- a/templates/ProductList.html
+++ b/templates/ProductList.html
@@ -8,33 +8,39 @@
     <title>ProductList</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="/styles/BackStore.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <style>
+        body {
+            padding-top: 50px
+        }
+    </style>
 </head>
 
 <body>
 
     <!-- Start of navigation bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/templates/Home.html">Home</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/templates/ProductList.html">Product List</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/templates/UserList.html">User List</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/templates/OrderList.html">Order List</a>
-                    </li>
-            </div>
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
+        <a class="navbar-brand" href="/templates/Home.html">Home</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="/templates/ProductList.html">Product List</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/templates/UserList.html">User List</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/templates/OrderList.html">Order List</a>
+                </li>
+            </ul>
         </div>
     </nav>
+    <br>
     <!-- End of navigation bar -->
 
     <!-- Start of order section -->
