I changed the relative paths so they work based on directory

--- a/styles/FrontStore.css
+++ b/styles/FrontStore.css
@@ -7,7 +7,7 @@
   }
 
 body{
-    background-image: url(/images/miscellaneous/Picture2.jpg);
+    background-image: url(../images/miscellaneous/Picture2.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
