--- a/templates/ShoppingCart.html
+++ b/templates/ShoppingCart.html
@@ -4,8 +4,8 @@
 
 <head>
 
-  <link rel="stylesheet" type="text/css" href="/styles/FrontStore.css">
-  <link rel="stylesheet" type="text/css" href="/styles/ShoppingCart.css">
+  <link rel="stylesheet" type="text/css" href="../styles/FrontStore.css">
+  <link rel="stylesheet" type="text/css" href="../styles/ShoppingCart.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Latest compiled and minified CSS -->
@@ -44,7 +44,7 @@
   <div class="cartbody">
     <div class="item1">
       <br />
-      <p><img src="/images/product_images/strawberries.jpg" alt="Garden strawberries"
+      <p><img src="../images/product_images/strawberries.jpg" alt="Garden strawberries"
           class="item1details" /><br />&nbsp&nbsp&nbspStrawberries</p>
       <p>&nbsp&nbsp&nbspGeneric Brand</p>
       <p>&nbsp&nbsp&nbsp$4.50 (450g)</p>
