--- a/templates/product_pages/steak.html
+++ b/templates/product_pages/steak.html
@@ -4,8 +4,8 @@
 
 <head>
 
-  <link rel="stylesheet" type="text/css" href="/styles/FrontStore.css">
-  <link rel="stylesheet" type="text/css" href="/styles/Product.css">
+  <link rel="stylesheet" type="text/css" href="../../styles/FrontStore.css">
+  <link rel="stylesheet" type="text/css" href="../../styles/Product.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Latest compiled and minified CSS -->
@@ -24,23 +24,20 @@
   <header>
     <div class="header">
       <h1>Online Grocery Store</h1>
-      <h2><a href="/templates/Home.html">Home Page</a> </h2>
+      <h2><a href="../Home.html">Home Page</a> </h2>
     </div>
 
     <div class="row">
-
-
-      <div class="col-md-3 bg-secondary"><a href="/templates/Aisles.html">Aisles</a> </div>
-      <div class="col-md-3 bg-secondary"><a href="/templates/ShoppingCart.html">Shopping Cart</a> </div>
-      <div class="col-md-3 bg-secondary"><a href="/templates/Signup.html"> Sign Up</a> </div>
-      <div class="col-md-3 bg-secondary"><a href="/templates/UserList.html"> User List</a> </div>
-
+      <div class="col-md-3 bg-secondary"><a href="../Aisles.html">Aisles</a> </div>
+      <div class="col-md-3 bg-secondary"><a href="../ShoppingCart.html">Shopping Cart</a> </div>
+      <div class="col-md-3 bg-secondary"><a href="../Signup.html"> Sign Up</a> </div>
+      <div class="col-md-3 bg-secondary"><a href="../UserList.html"> User List</a> </div>
     </div>
   </header>
 
   <div class="itemdisplay">
     <div class="picture">
-      <img src="/images/product_images/steak.jpg" alt="Steak" />
+      <img src="../../images/product_images/steak.jpg" alt="Steak" />
     </div>
     <div class="descriptionandwhatnot" <p class="productname">Steak</p>
       <p>1kg (2.2lbs)</p><br /><br /><br /><br /><br /><br />
