--- a/templates/Aisles.html
+++ b/templates/Aisles.html
@@ -1,6 +1,6 @@
 <head>
 
-    <link rel="stylesheet" type="text/css" href="/styles/FrontStore.css">
+    <link rel="stylesheet" type="text/css" href="../styles/FrontStore.css">
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -38,50 +38,50 @@
         <div class="items">
             <h6> Fruits and Vegetables</h6>
             <div class="row">
-                <div class="col-md-3 bg-light"><a href="/templates/product_pages/strawberry1.html">Strawberries </a>
-                    <div><img src="/images/product_images/strawberries.jpg"> </div>
+                <div class="col-md-3 bg-light"><a href="../templates/product_pages/strawberry1.html">Strawberries </a>
+                    <div><img src="../images/product_images/strawberries.jpg"> </div>
                 </div>
-                <div class="col-md-3 bg-light"><a href="/templates/product_pages/apples.html">Apples</a>
-                    <div><img src="/images/product_images/apples.jpg"> </div>
+                <div class="col-md-3 bg-light"><a href="../templates/product_pages/apples.html">Apples</a>
+                    <div><img src="../images/product_images/apples.jpg"> </div>
                 </div>
-                <div class="col-md-3 bg-light"> <a href="/templates/product_pages/carrots.html">Carrots</a>
-                    <div><img src="/images/product_images/carrots.jpg"> </div>
+                <div class="col-md-3 bg-light"> <a href="../templates/product_pages/carrots.html">Carrots</a>
+                    <div><img src="../images/product_images/carrots.jpg"> </div>
                 </div>
-                <div class="col-md-3 bg-light"><a href="/templates/product_pages/lettuce.html">Lettuce</a>
-                    <div><img src="/images/product_images/lettuce.jpg"> </div>
+                <div class="col-md-3 bg-light"><a href="../templates/product_pages/lettuce.html">Lettuce</a>
+                    <div><img src="../images/product_images/lettuce.jpg"> </div>
                 </div>
             </div>
             <div class="proteins">
                 <h6> Proteins</h6>
                 <div class="row">
-                    <div class="col-md-3 bg-light"><a href="/templates/product_pages/groundbeef.html">Ground Beef</a>
-                        <div><img src="/images/product_images/beef.jpg"> </div>
+                    <div class="col-md-3 bg-light"><a href="../templates/product_pages/groundbeef.html">Ground Beef</a>
+                        <div><img src="../images/product_images/beef.jpg"> </div>
                     </div>
-                    <div class="col-md-3 bg-light"><a href="/templates/product_pages/chicken.html">Chicken</a>
-                        <div><img src="/images/product_images/chicken.jpg"> </div>
+                    <div class="col-md-3 bg-light"><a href="../templates/product_pages/chicken.html">Chicken</a>
+                        <div><img src="../images/product_images/chicken.jpg"> </div>
                     </div>
-                    <div class="col-md-3 bg-light"> <a href="/templates/product_pages/turkey.html">Turkey</a>
-                        <div><img src="/images/product_images/turkey.jpg"> </div>
+                    <div class="col-md-3 bg-light"> <a href="../templates/product_pages/turkey.html">Turkey</a>
+                        <div><img src="../images/product_images/turkey.jpg"> </div>
                     </div>
-                    <div class="col-md-3 bg-light"><a href="/templates/product_pages/steak.html">Steak</a>
-                        <div><img src="/images/product_images/steak.jpg"> </div>
+                    <div class="col-md-3 bg-light"><a href="../templates/product_pages/steak.html">Steak</a>
+                        <div><img src="../images/product_images/steak.jpg"> </div>
                     </div>
                 </div>
             </div>
             <div class="dairy">
                 <h6> Dairy Products</h6>
                 <div class="row">
-                    <div class="col-md-3 bg-light"><a href="/templates/product_pages/milk.html">Milk</a>
-                        <div><img src="/images/product_images/milk.jpg"> </div>
+                    <div class="col-md-3 bg-light"><a href="../templates/product_pages/milk.html">Milk</a>
+                        <div><img src="../images/product_images/milk.jpg"> </div>
                     </div>
-                    <div class="col-md-3 bg-light"><a href="/templates/product_pages/cheese.html">Cheese</a>
-                        <div><img src="/images/product_images/cheese.jpg"> </div>
+                    <div class="col-md-3 bg-light"><a href="../templates/product_pages/cheese.html">Cheese</a>
+                        <div><img src="../images/product_images/cheese.jpg"> </div>
                     </div>
-                    <div class="col-md-3 bg-light"> <a href="/templates/product_pages/butter.html">Butter</a>
-                        <div><img src="/images/product_images/butter.jpg"> </div>
+                    <div class="col-md-3 bg-light"> <a href="../templates/product_pages/butter.html">Butter</a>
+                        <div><img src="../images/product_images/butter.jpg"> </div>
                     </div>
-                    <div class="col-md-3 bg-light"><a href="/templates/product_pages/yogurt.html">Yogurt</a>
-                        <div><img src="/images/product_images/yogurt.jpg"> </div>
+                    <div class="col-md-3 bg-light"><a href="../templates/product_pages/yogurt.html">Yogurt</a>
+                        <div><img src="../images/product_images/yogurt.jpg"> </div>
                     </div>
                 </div>
 
@@ -89,17 +89,17 @@
             <div class="Bakery">
                 <h6> Bakery</h6>
                 <div class="row">
-                    <div class="col-md-3 bg-light"><a href="/templates/product_pages/bread.html">Bread</a>
-                        <div><img src="/images/product_images/bread.jpg"> </div>
+                    <div class="col-md-3 bg-light"><a href="../templates/product_pages/bread.html">Bread</a>
+                        <div><img src="../images/product_images/bread.jpg"> </div>
                     </div>
-                    <div class="col-md-3 bg-light"><a href="/templates/product_pages/muffins.html">Muffins</a>
-                        <div><img src="/images/product_images/muffins.jpg"> </div>
+                    <div class="col-md-3 bg-light"><a href="../templates/product_pages/muffins.html">Muffins</a>
+                        <div><img src="../images/product_images/muffins.jpg"> </div>
                     </div>
-                    <div class="col-md-3 bg-light"> <a href="/templates/product_pages/croissants.html">Croissants</a>
-                        <div><img src="/images/product_images/croissants.jpg"> </div>
+                    <div class="col-md-3 bg-light"> <a href="../templates/product_pages/croissants.html">Croissants</a>
+                        <div><img src="../images/product_images/croissants.jpg"> </div>
                     </div>
-                    <div class="col-md-3 bg-light"><a href="/templates/product_pages/pie.html">Pie</a>
-                        <div><img src="/images/product_images/pie.jpg"> </div>
+                    <div class="col-md-3 bg-light"><a href="../templates/product_pages/pie.html">Pie</a>
+                        <div><img src="../images/product_images/pie.jpg"> </div>
                     </div>
                 </div>
 
