--- a/templates/EditOrder.html
+++ b/templates/EditOrder.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EditOrder</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/styles/BackStore.css">
+    <link rel="stylesheet" href="../styles/BackStore.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
@@ -21,20 +21,20 @@
 <body>
     <!-- Start of navigation bar -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
-        <a class="navbar-brand" href="/templates/Home.html">Home</a>
+        <a class="navbar-brand" href="../templates/Home.html">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/templates/ProductList.html">Product List</a>
+                    <a class="nav-link" href="../templates/ProductList.html">Product List</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/templates/UserList.html">User List</a>
+                    <a class="nav-link" href="../templates/UserList.html">User List</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/templates/OrderList.html">Order List</a>
+                    <a class="nav-link" href="../templates/OrderList.html">Order List</a>
                 </li>
             </ul>
         </div>
