--- a/templates/EditUser.html
+++ b/templates/EditUser.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EditUser</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/styles/BackStore.css">
+    <link rel="stylesheet" href="../styles/BackStore.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
@@ -31,13 +31,13 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/templates/ProductList.html">Product List</a>
+                    <a class="nav-link" href="../templates/ProductList.html">Product List</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/templates/UserList.html">User List</a>
+                    <a class="nav-link" href="../templates/UserList.html">User List</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/templates/OrderList.html">Order List</a>
+                    <a class="nav-link" href="../templates/OrderList.html">Order List</a>
                 </li>
             </ul>
         </div>
