--- a/templates/Home.html
+++ b/templates/Home.html
@@ -4,7 +4,7 @@
 
 <head>
 
-    <link rel="stylesheet" type="text/css" href="/styles/FrontStore.css">
+    <link rel="stylesheet" type="text/css" href="../styles/FrontStore.css">
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
