--- a/templates/Login.html
+++ b/templates/Login.html
@@ -2,7 +2,7 @@
 
 <head>
   <title>Login Form Design</title>
-  <link rel="stylesheet" type="text/css" href="/styles/LoginSignUp.css">
+  <link rel="stylesheet" type="text/css" href="../styles/LoginSignUp.css">
 </head>
 
 <body>
@@ -10,7 +10,7 @@
     <h2><a href="Home.html">Online Grocery Store</a> </h2>
   </div>
   <div class="loginbox">
-    <img src="/images/miscellaneous/Avatar.png" class="avatar">
+    <img src="../images/miscellaneous/Avatar.png" class="avatar">
     <h1>Login Here</h1>
     <form>
       <p>Email</p>
