--- a/templates/Signup.html
+++ b/templates/Signup.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>Sign up Form</title>
-    <link rel="stylesheet" type="text/css" href="/styles/LoginSignUp.css">
+    <link rel="stylesheet" type="text/css" href="../styles/LoginSignUp.css">
 </head>
 
 <body>
@@ -10,7 +10,7 @@
         <h2><a href="Home.html">Online Grocery Store</a> </h2>
     </div>
     <div class="signup-form">
-        <img src="/images/miscellaneous/Picture1.png" class="icon">
+        <img src="../images/miscellaneous/Picture1.png" class="icon">
         <h1>Sign Up Form</h1>
         <form action="#">
             <p>First Name:</p>
