save button on ProductList

--- a/styles/BackStore.css
+++ b/styles/BackStore.css
@@ -54,6 +54,13 @@ a.btn.btn-info {
   font-family: "Comic Sans MS";
   word-wrap: break-word;
 }
+button.btn.btn-info {
+  width: 8%;
+  position: absolute;
+  right: 5%;
+  font-family: "Comic Sans MS";
+  word-wrap: break-word;
+}
 
 /* new button */
 li.list-group-item.New {
